fix endpoint naming
